--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 2
     - name: Check for changelog modification for large enough PR
       run: |
         if [ $(git diff origin/main origin/${GITHUB_HEAD_REF} | wc -l) -gt 10 ]; then
