--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,5 +17,5 @@ jobs:
       run: |
         git fetch origin main:main
         if [ $(git diff main HEAD | wc -l) -gt 10 ]; then
-           $(git diff --name-only main HEAD) | grep CHANGELOG.md
+           git diff --name-only main HEAD | grep CHANGELOG.md
         fi
